# autopilot-ml

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
.planning/: .continue-here.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  finalize-v1.0.md  v1.0-MILESTONE-AUDIT.md  v3.0-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v2.0-REQUIREMENTS.md  v2.0-ROADMAP.md  v3.0-REQUIREMENTS.md
.planning/phases/01-core-engine-plugin-infrastructure/: 01-01-SUMMARY.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-RESEARCH.md  01-VALIDATION.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-03-PLAN.md  01-03-SUMMARY.md  01-VALIDATION.md
.planning/phases/02-core-loop/: 02-01-PLAN.md  02-02-PLAN.md  02-03-SUMMARY.md  02-VALIDATION.md
.planning/phases/02-tabular-plugin-experiment-intelligence/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-RESEARCH.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-cli-and-integration/: 03-02-PLAN.md  03-RESEARCH.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/03-scaffold-cli-run-engine/: 03-01-PLAN.md  03-02-PLAN.md  03-03-SUMMARY.md  03-RESEARCH.md  03-VALIDATION.md
.planning/phases/04-e2e-baseline-test/: 04-01-PLAN.md  04-VALIDATION.md  04-VERIFICATION.md  FINDINGS.md  deferred-items.md
.planning/phases/04-e2e-validation-ux/: 04-01-PLAN.md  04-02-SUMMARY.md  (+1 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md  claude-code-capabilities-research.md  multi-agent-swarm-research.md
docs/: configuration.md  deep-learning-guide.md  fine-tuning-guide.md  getting-started.md  swarm-guide.md  tabular-guide.md
experiment-pipeline_deals/: .gitignore
scripts/: parse_run_result.py  run-baseline-test.sh  run-forecast-validation-test.sh  run-swarm-test.sh  run-v3-validation-test.sh  run-validation-test.sh
src/automl/: checkpoint.py  cli.py  drafts.py  experiment_logger.py  forecast.py  git_ops.py  loop_helpers.py  prepare.py  runner.py  scaffold.py  swarm.py  swarm_claims.py  swarm_scoreboard.py  train_template.py  train_template_forecast.py
src/mlforge/: __init__.py  checkpoint.py  clean.py  cli.py  config.py  engine.py  export.py  git_ops.py  gpu.py  guardrails.py  hooks.py  journal.py  logging_config.py  notify.py  plugins.py  profiler.py  progress.py  retrospective.py  scaffold.py  state.py  status.py
tests/: conftest.py  test_checkpoint.py  test_cli.py  test_drafts.py  test_e2e.py  test_e2e_baseline.py  test_forecast.py  test_git.py  test_git_ops.py  test_journal.py  test_logging.py  test_loop_helpers.py  test_parse_run_result.py  test_phase14_validation.py  test_phase18_validation.py  test_phase7_validation.py  test_prepare.py  test_runner.py  test_scaffold.py  test_swarm.py  test_swarm_claims.py  test_swarm_scoreboard.py  test_templates.py  test_train.py  test_train_template_forecast.py
tests/fixtures/: noisy.csv  quarterly_revenue.csv
tests/mlforge/: conftest.py  test_baselines.py  test_checkpoint.py  test_clean.py  test_cli.py  test_config.py  test_diagnostics.py  test_dl_baselines.py  test_dl_plugin.py  test_drafts.py  test_engine.py  test_export.py  test_ft_baselines.py  test_ft_plugin.py  test_guardrails.py  test_hooks.py  test_integration_smoke.py  test_journal.py  test_mlforge_swarm.py  test_plugins.py  test_profiler.py  test_progress.py  test_results.py  test_retrospective.py  test_scaffold.py  test_scoreboard.py  test_stagnation.py  test_state.py  test_status.py  test_swarm.py  test_swarm_state_enforcement.py  test_tabular.py  test_templates.py
(+266 files in other folders)
