[project]
name = "mlforge"
version = "0.1.0"
description = "Autonomous ML research framework"
requires-python = ">=3.11"
dependencies = [
    "gitpython>=3.1",
    "jinja2>=3.1",
    "scikit-learn>=1.5",
    "pandas>=2.0",
    "numpy>=2.0",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "optuna>=4.0",
    "pyarrow>=15.0",
    "rich>=13.0",
    "psutil>=6.0",
]

[project.scripts]
mlforge = "mlforge.cli:main"

[dependency-groups]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mlforge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (e.g. scaffold + run train.py)",
]
